src/parser/snapshots/camello__parser__statement__tests__statements__errors__missing_semicolon_block.snap
---
source: src/parser/statement.rs
expression: render_errors(&errors)
---
  × Parse error: Expected ';' after expression statement
   ╭────
 1 │ sub test { foo() bar() }
   ·                  ─┬─
   ·                   ╰── here
   ╰────
